# GeckoEngine

./: CMakeLists.txt  README.md  test_script.py
includes/: chess_board.hpp  chess_settings.hpp  precalculated.hpp  utils.hpp
src/: chess_board.cpp  main.cpp  precalculated.cpp
